# university

./: README.md
FirstYear/semestrul1/ASC/CURSURI/: ASC CURS .docx
FirstYear/semestrul1/ASC/SEMINAR/: ASC SEMINAR 1.docx  seminar2.docx
FirstYear/semestrul1/ASC/teorie_examen/: FLAGS.docx  MICROPROCESORUL X86.docx  OVERFLOW.docx  TIP DATA + CONVERSII.docx
FirstYear/semestrul1/FP/: Recap_teorie.docx
FirstYear/semestrul1/FP/CURSURI/: FP-CURS1.docx
FirstYear/semestrul1/FP/LABORATOR/L1/: cmmdc  nr_prim  suma_n_numere
FirstYear/semestrul1/FP/LABORATOR/L2/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
FirstYear/semestrul1/FP/LABORATOR/L3/: Lab3.py  cazuri_testare.txt  lab_3.py  scenarii_rulare.txt
FirstYear/semestrul1/FP/LABORATOR/L4-6/: DOMAIN.docx  DocumentationLab4-6.docx
FirstYear/semestrul1/FP/LABORATOR/Lab13-back/: Pb13  descriere_back.txt
FirstYear/semestrul1/FP/LABORATOR/app/: main.py  testing.py
FirstYear/semestrul1/FP/LABORATOR/test_simulare/: controler.py  domain.py  main.py  read_me.txt  repository.py  robots.txt  ui.py
FirstYear/semestrul1/FP/alta_pregatire/: examene.txt
FirstYear/semestrul1/FP/alta_pregatire/domain/: examen.py
FirstYear/semestrul1/FP/pregatire_practic/: main.py  tractoare.txt
FirstYear/semestrul1/FP/pregatire_practic/domain/: tractor.py
FirstYear/semestrul1/FP/pregatire_practic/repository/: repo_tractor.py
FirstYear/semestrul1/FP/pregatire_practic/service/: service_tractor.py
FirstYear/semestrul1/FP/pregatire_practic/ui/: ui_main.py  validation.py
FirstYear/semestrul1/FP/simulare_212/: domain.py  domino.txt  main.py  repository.py  service.py  test.txt  tests.py  user_interface.py
FirstYear/semestrul1/examen_practic/: main.py  spectacole.txt
FirstYear/semestrul1/examen_practic/domain/: spectacol.py
FirstYear/semestrul1/examen_practic/repo/: spectacol_repo.py
FirstYear/semestrul1/examen_practic/srv/: spectacol_srv.py
FirstYear/semestrul1/examen_practic/ui/: ui_main.py
FirstYear/semestrul1/examen_practic/valid/: validation.py
FirstYear/semestrul2/GRAF/LAB/: Lab1  Lab1.cpp  graf.txt
FirstYear/semestrul2/GRAF/LAB/Lab_5/: CMakeLists.txt  f3.txt  p1  p1.cpp  p2  p2.cpp  p3  p3.cpp
FirstYear/semestrul2/GRAF/test2_grafuri/: CMakeLists.txt  main.cpp
FirstYear/semestrul2/OOP/Exam_PRACTIC/melodie1/: CMakeLists.txt  domain.h  gui.h  main.cpp  melodii.txt  model.h  repo.h  service.h  teste.txt  tests.h
FirstYear/semestrul2/OOP/Exam_PRACTIC/taskuri/: CMakeLists.txt  domain.h  gui.cpp  gui.h  main.cpp  observer.h  repo.cpp  repo.h  service.h  taskuri.txt
FirstYear/semestrul2/OOP/LAB/Lab10/: CMakeLists.txt  GUI.cpp  contract.cpp  main.cpp  repo.cpp  service.cpp  teste.cpp  validator.cpp
FirstYear/semestrul2/OOP/LAB/Lab13-14/: CMakeLists.txt  GUI.cpp  GUI.h  contract.cpp  contract.h  contractCRUDgui.h  contractREADgui.h  disciplina.h  discipline.txt  main.cpp  myTable.h  observer.h  repo.cpp  repo.h  service.cpp  service.h  test.csv  test.html  teste.cpp  teste.h
FirstYear/semestrul2/OOP/LAB/Lab2_4/: CMakeLists.txt  list.c  list.h  main.c  offer.c  offer.h  service.c  service.h  tests.c  tests.h
FirstYear/semestrul2/OOP/LAB/Lab5/: CodeReviewTemplate.odt
FirstYear/semestrul2/OOP/LAB/Lab6_7/: CMakeLists.txt  main.cpp  repo.cpp  repo.h  service.cpp  service.h  teste.cpp  teste.h  ui.cpp  ui.h  validator.cpp  vector_dinamic.h
FirstYear/semestrul2/OOP/LAB/Lab8_9/: CMakeLists.txt  contract.cpp  contract.h  contract1.csv  contract1.html  discipline.txt  erori.h  main.cpp  service.cpp  service.h  test.csv  test.html  teste.cpp  ui.cpp  ui.h  undo.h
FirstYear/semestrul2/OOP/SIMULARE/club_scolar/: CMakeLists.txt  domain.h  gui.cpp  gui.h  main.cpp  repo.cpp  repo.h  service.cpp  service.h  test.cpp  test.h
FirstYear/semestrul2/OOP/SIMULARE/rochii/: CMakeLists.txt  domain.h  gui.cpp  gui.h  main.cpp  repo.cpp  repo.h  rochii.txt  service.cpp  service.h  test.cpp  test.h
FirstYear/semestrul2/OOP/SIMULARE/simulare/: CMakeLists.txt  cazuri.txt  domain.h  gui.cpp  gui.h  main.cpp  repo.cpp  repo.h  service.cpp  service.h  tes.h  test.cpp  test.txt
FirstYear/semestrul2/OS/: Probleme threads.docx  intrebari rezolvate.docx  teorie part2.docx
FirstYear/semestrul2/OS/seminarii/: 4Unix_pipe_FIFO_popen_dup.docx
FirstYear/semestrul2/OS/shell/: probleme practic.docx
FirstYear/semestrul2/OS/subiecte/nu stiu anii/: ~$AM-1-2017-2018.docx
FirstYear/semestrul2/SDA/LAB/: CMakeLists.txt
FirstYear/semestrul2/SDA/LAB/Colectie (cu rel)_Lab4/: CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestScurt.cpp
FirstYear/semestrul2/SDA/LAB/Colectie_Lab6/: App.cpp  CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestExtins.cpp  TestScurt.cpp
FirstYear/semestrul2/SDA/LAB/Dictionar_Lab1/: App  App.cpp  Dictionar.cpp  Dictionar.h  IteratorDictionar.cpp  IteratorDictionar.h  TestExtins.h  TestScurt.cpp  TestScurt.h  TesteExtins.cpp
FirstYear/semestrul2/SDA/LAB/Dictionar_Lab1/App.dSYM/Contents/Resources/DWARF/: App
FirstYear/semestrul2/SDA/LAB/Dictionar_Lab1/App.dSYM/Contents/Resources/Relocations/aarch64/: App.yml
FirstYear/semestrul2/SDA/LAB/Matrice_Lab7/: CMakeLists.txt  Iterator.h  Matrice.cpp  Matrice.h  TestExtins.cpp  TestScurt.cpp
FirstYear/semestrul2/SDA/LAB/MultiDictionar_Lab3/: App.cpp  CMakeLists.txt  IteratorMD.cpp  IteratorMD.h  MD.cpp  MD.h  TestScurt.cpp  TestScurt.h
SecondYear/semestrul3/BAZE/Biblioteca/: ex1.sql
SecondYear/semestrul3/BAZE/MediaAgency/Lab1/: MediaAgency.sql
SecondYear/semestrul3/BAZE/MediaAgency/Lab2/: PopulateTables.sql  QueriesTables.sql
SecondYear/semestrul3/ENGLEZA/: Exploring HCI - english project .docx
SecondYear/semestrul3/PLF/test/: minim.pl
SecondYear/semestrul3/PS/: Lab2.ipynb  Lab3.ipynb  Lab4.ipynb  Lab5.ipynb  SUBIECTE PRACTIC PS.docx
SecondYear/semestrul3/PS/.ipynb_checkpoints/: Lab3-checkpoint.ipynb
SecondYear/semestrul3/RETELE/LAB/: UDP vs TCP.docx
SecondYear/semestrul3/RETELE/practic/: client  client.c  server  server.c
(+448 files in other folders)
